objects/ChkxMaster__c.object
<CustomObject>
    <fields>
        <fullName>CountOfFlag1__c</fullName>
        <label>CountOfFlag1</label>
        <summarizedField>ChkBxObject__c.NumberOfFlag1__c</summarizedField>
        <summaryForeignKey>ChkBxObject__c.ChkxMaster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfFlag2__c</fullName>
        <label>CountOfFlag2</label>
        <summarizedField>ChkBxObject__c.NumberOfFlag2__c</summarizedField>
        <summaryForeignKey>ChkBxObject__c.ChkxMaster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfFlag3__c</fullName>
        <label>CountOfFlag3</label>
        <summarizedField>ChkBxObject__c.NumberOfFlag3__c</summarizedField>
        <summaryForeignKey>ChkBxObject__c.ChkxMaster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ChkxMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ChkxMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChkxMaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>